modifiyit bach n meurgi

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test git</title>
     <h1> mimi mimi mimi </h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus in deleniti veritatis, delectus laudantium labore ratione rerum maxime iste enim eum officiis, voluptatem nobis et aperiam velit voluptas qui molestiae.</p>
+    <p> Accusamus in deleniti veritatis, delectus laudantium labore ratione rerum maxime iste enim eum officiis, voluptatem nobis et aperiam velit voluptas qui molestiae.</p>
 </head>
 <body>
     
